# baistro

./: .dockerignore  .editorconfig  .gitignore  Dockerfile  LICENSE  README.md  config.yaml  docker-compose.yml  pyproject.toml
.github/workflows/: blank.yml
baistro/: _boot.py  cli.py  server.py
baistro/api/: api.py  api_clustering.py  api_models.py  api_sentences.py  api_stanza.py  api_tasks.py  api_vectors.py  api_word_occurrences.py  clustering_plots.py  schemas.py
baistro/commands/: cli_model.py
baistro/config/: config.py
baistro/helper/: qag_parser.py  ts.py
baistro/model_control/: infer_result.py  model_base.py  models.py  st_model.py  stanza_model.py
baistro/models/: dit_base.py  dit_large.py  donut_docvqa.py  donut_to_data.py  donut_to_text.py  qa_en_base.py  qa_en_large.py  qag_en_base.py  qnli_en_base.py  stanza_models.py  vector_code.py  vector_image.py  vector_text.py
baistro/templates/: index.html  main-dark.css
