[tool.poetry]
name = "baistro"
version = "0.0.2"
description = "baistro - AI as API"
authors = ["Michael Becker <michael@bemit.codes>"]
license = "MIT"
readme = "README.md"

[tool.poetry.scripts]
cli = "baistro.cli:cli"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.3"
flask-cors = "^4.0.1"
werkzeug = "^3.0.4"
click = "^8.1.3"
nanoid = "^2.0.0"
transformers = "^4.37.2"
datasets = "^2.11.0"
sentencepiece = "^0.1.98"
smart-open = "^6.3.0"
accelerate = "^0.20.3"
sentence-transformers = "^2.2.2"
stanza = "^1.5.0"
apiflask = "^2.2.0"
# todo: check if `diffusers` users is really needed, there shouldn't be any such image model left here
# diffusers = "^0.21.4"
torch = [
    # cp310 = python 3.10, cp311 = python 3.11
    { "platform" = 'linux', "python" = "^3.10", "url" = "https://download.pytorch.org/whl/cpu/torch-2.0.1%2Bcpu-cp310-cp310-linux_x86_64.whl" },
    { "platform" = 'win64', "python" = "^3.10", "url" = "https://download.pytorch.org/whl/cpu/torch-2.0.1%2Bcpu-cp310-cp310-win_amd64.whl" },
    { "platform" = 'win32', "python" = "^3.10", "url" = "https://download.pytorch.org/whl/cpu/torch-2.0.1%2Bcpu-cp310-cp310-win_amd64.whl" },
    { "platform" = 'windows', "python" = "^3.10", "url" = "https://download.pytorch.org/whl/cpu/torch-2.0.1%2Bcpu-cp310-cp310-win_amd64.whl" },
    #{ "platform" = 'windows', "python" = "3.9", "url" = "https://download.pytorch.org/whl/cpu/torch-2.0.1%2Bcpu-cp39-cp39-win_amd64.whl" },
    # { "platform" = 'windows', "python" = "3.9", "url" = "https://download.pytorch.org/whl/cpu/torch-2.0.0%2Bcpu-cp39-cp39-win_amd64.whl" },
]
torchtext = "~0.15.2"
optimum = "^1.9.1"
gunicorn = { version = "^21.2.0", optional = true }

[tool.poetry.extras]
gunicorn = ["gunicorn"]

[tool.poetry.dev-dependencies]
pytest = "^7.2.2"
flake8 = "^6.0.0"
pip-licenses = "^4.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
