[tool.poetry]
name = "baistro"
version = "0.2.1"
description = "baistro - AI as API"
authors = ["Michael Becker <michael@bemit.codes>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.scripts]
cli = "baistro.cli:cli"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.1.2"
flask-cors = "^6.0.1"
werkzeug = "^3.1.3"
click = "^8.2.1"
transformers = "^4.56.0"
smart-open = "^6.3.0"
sentence-transformers = "^5.1.0"
stanza = "^1.10.1"
apiflask = "^2.4.0"
marshmallow = "^3.20.2" # api flask/flask-marshmallow is not compatible with v4
pillow = "^11.3.0"
scikit-learn = "^1.7.0"
torch = [
    { "platform" = 'linux', "python" = "3.12", "url" = "https://download.pytorch.org/whl/cpu/torch-2.6.0%2Bcpu-cp312-cp312-linux_x86_64.whl" },
    { "platform" = 'win64', "python" = "3.12", "url" = "https://download.pytorch.org/whl/cpu/torch-2.6.0%2Bcpu-cp312-cp312-win_amd64.whl" },
    { "platform" = 'win32', "python" = "3.12", "url" = "https://download.pytorch.org/whl/cpu/torch-2.6.0%2Bcpu-cp312-cp312-win_amd64.whl" },
    { "platform" = 'windows', "python" = "3.12", "url" = "https://download.pytorch.org/whl/cpu/torch-2.6.0%2Bcpu-cp312-cp312-win_amd64.whl" },
    # cp310 = python 3.10, cp311 = python 3.11
    { "platform" = 'linux', "python" = "3.10", "url" = "https://download.pytorch.org/whl/cpu/torch-2.6.0%2Bcpu-cp310-cp310-linux_x86_64.whl" },
    { "platform" = 'win64', "python" = "3.10", "url" = "https://download.pytorch.org/whl/cpu/torch-2.6.0%2Bcpu-cp310-cp310-win_amd64.whl" },
    { "platform" = 'win32', "python" = "3.10", "url" = "https://download.pytorch.org/whl/cpu/torch-2.6.0%2Bcpu-cp310-cp310-win_amd64.whl" },
    { "platform" = 'windows', "python" = "3.10", "url" = "https://download.pytorch.org/whl/cpu/torch-2.6.0%2Bcpu-cp310-cp310-win_amd64.whl" },
    #{ "platform" = 'windows', "python" = "3.9", "url" = "https://download.pytorch.org/whl/cpu/torch-2.6.0%2Bcpu-cp39-cp39-win_amd64.whl" },
    # { "platform" = 'windows', "python" = "3.9", "url" = "https://download.pytorch.org/whl/cpu/torch-2.0.0%2Bcpu-cp39-cp39-win_amd64.whl" },
]
gunicorn = { version = "^23.0.0", optional = true }

[tool.poetry.extras]
gunicorn = ["gunicorn"]

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
flake8 = "^7.3.0"
pip-licenses = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
